Added lottie file to home page, finished all the copy aside from footer mission statement

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 06:25:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 09:03:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
       <div>
-        <h3 class="nav_bar_h3">Ryu Acupuncture, Inc</h3>
+        <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav_link w-nav-link">Home</a>
@@ -38,7 +38,7 @@
   <div class="conditions_treated_page">
     <div class="main_container">
       <h1 class="section_h1">Conditions Treated</h1>
-      <p class="solo_para">According to the National Institutes of Health, <a href="https://www.nccih.nih.gov/health/traditional-chinese-medicine-what-you-need-to-know" class="blue_link">Traditional Chinese Medicine (TCM)</a> is a complete medical system that treats a wide range of conditions including, but not limited to:</p>
+      <p class="solo_para">Modern medicine has many pitfalls such as overprescribed medications, unnecessary surgeries and symptomatic treatments that don&#x27;t achieve long-term results. Traditional Chinese Medicine is often times a better solution for treatment of chronic conditions and has many positive side effects such as improving the quality of life. According to the National Institutes of Health, <a href="https://www.nccih.nih.gov/health/traditional-chinese-medicine-what-you-need-to-know" class="blue_link">Traditional Chinese Medicine (TCM)</a> is a complete medical system that treats a wide range of conditions including, but not limited to:</p>
       <div class="_2_block_row_ailment_right">
         <div data-w-id="18fc1319-c4f4-a476-ea5f-69382d118ce6" class="muscoskeletal_block">
           <div class="services_mask_left"></div>
@@ -490,7 +490,7 @@
     <div class="main_container">
       <div class="_4_block_row">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
-          <h3 class="footer_h3">Ryu Acupuncture, Inc</h3>
+          <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative, and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
