--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 06:25:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 09:03:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
       <div>
-        <h3 class="nav_bar_h3">Ryu Acupuncture, Inc</h3>
+        <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav_link w-nav-link">Home</a>
@@ -62,7 +62,7 @@
     <div class="main_container">
       <div class="_4_block_row">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
-          <h3 class="footer_h3">Ryu Acupuncture, Inc</h3>
+          <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative, and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
