--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 06:25:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 09:03:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
       <div>
-        <h3 class="nav_bar_h3">Ryu Acupuncture, Inc</h3>
+        <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav_link w-nav-link">Home</a>
@@ -37,7 +37,7 @@
   <div class="services_intro_section">
     <div class="main_container">
       <h1 class="section_h1">Our Services</h1>
-      <p class="solo_para">We utilize both Eastern and Western therapeutic tools to tailor the most comprehensive and efficient course of treatment to meet your health goals. We use best-in-class standards </p>
+      <p class="solo_para">We offer a wide range of holistic preventative and rehabilitative services. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proven effective for a wide array of chronic conditions. Fortunately, it is becoming more mainstream in the West. During your initial visit, we will work together to determine the cause of your condition through an evaluation of symptoms, behaviors and lifestyle. Additional examination such as history, look, feel, taste, smell and your ultimately your pulse will help guide the course of your treatment.</p>
     </div>
   </div>
   <div class="services_picture_section">
@@ -161,7 +161,7 @@
     <div class="main_container">
       <div class="_4_block_row">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
-          <h3 class="footer_h3">Ryu Acupuncture, Inc</h3>
+          <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative, and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
