--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 06:25:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 09:03:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
       <div>
-        <h3 class="nav_bar_h3">Ryu Acupuncture, Inc</h3>
+        <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav_link w-nav-link">Home</a>
@@ -37,8 +37,9 @@
   <div class="testimonial_page_section">
     <div class="main_container mix-container">
       <h1 class="section_h1">Testimonials</h1>
-      <p class="solo_para">Come see why we are the #1 rated acupuncturists in Los Angeles. With over 110+ five star reviews through Yelp and Google, it is clear </p>
+      <p class="solo_para">We pride ourselves in the great feedback received by our patients and strive to make every visit and experience exceptional. Our patients put their trust in our work and we want to continue to live up to the high expectations set for us. With over 110 five star reviews through Yelp and Google, we have often been referred to as the #1 rated acupuncturists in Los Angeles. Check out some of the wonderful testimonials we have received over the years down below.</p>
       <div data-w-id="917b686c-0e22-bc8f-8889-0287e98e202a" data-animation-type="lottie" data-src="documents/best_acupuncturist.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="2" data-duration="0" class="lottie-animation"></div>
+      <div class="block_text_pre_h2">FILTER BY SOURCE</div>
       <div class="filter-controls">
         <a data-filter="all" href="#" class="filter-button ryu_testimonial_button w-button"><strong>ALL</strong></a>
         <a data-filter=".yelp" href="#" class="filter-button ryu_testimonial_button w-button"><strong>YELP</strong></a>
@@ -756,7 +757,7 @@
     <div class="main_container">
       <div class="_4_block_row">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
-          <h3 class="footer_h3">Ryu Acupuncture, Inc</h3>
+          <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative, and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
