--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 06:25:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 09:03:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
       <div>
-        <h3 class="nav_bar_h3">Ryu Acupuncture, Inc</h3>
+        <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" aria-current="page" class="nav_link w-nav-link w--current">Home</a>
@@ -140,8 +140,10 @@
           <div class="block_text_pre_h2_left">CONVENIENT LOCATION</div>
           <h2 class="section_h2_left">Easily accessible and within minutes of major freeways</h2>
           <p>Our address is 3808 W. Riverside Dr. in the beautiful city of Burbank, California. We are conveniently located within the Bank of the West building, nestled between the Warner Bros., Walt Disney and Burbank Studios. We&#x27;re just South of the 134 Ventura Freeway and minutes from the 101, 170 and 5 freeways. Our office is located on the 5th floor in suite #510.<br></p>
-          <div data-w-id="e86a3abe-770f-bfa9-be83-0a90d1d478c5" data-animation-type="lottie" data-src="https://d3e54v103j8qbb.cloudfront.net/plugins/Animation/assets/wf-placeholder.cd67a2c2ba.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="4.08" data-duration="0"></div>
-          <p>Need directions? <a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="link">Click here</a><br></p>
+          <div class="div-block">
+            <p>Need directions? <a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="link">Click here</a><br></p>
+            <div data-w-id="e86a3abe-770f-bfa9-be83-0a90d1d478c5" data-animation-type="lottie" data-src="documents/blue_arrow.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1.1333333333333333" data-duration="0" class="lottie-animation-2"></div>
+          </div>
           <div class="_2_block_row_mini">
             <div class="_2_block">
               <p class="paragraph-9">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
@@ -491,7 +493,7 @@
     <div class="main_container">
       <div class="_4_block_row">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
-          <h3 class="footer_h3">Ryu Acupuncture, Inc</h3>
+          <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative, and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
