Adjusted spacing, margins and formats for mobile and larger screen resolutions, many corrections remaining

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 09:03:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Apr 24 2021 09:32:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -78,7 +78,7 @@
       </div>
       <div class="_2_block_row">
         <div class="_360_frame_block">
-          <a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""></a>
+          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="" class="image-2"></a>
         </div>
         <div class="_2_block">
           <div class="block_text_pre_h2_left">RESULTS MATTER</div>
@@ -106,7 +106,7 @@
                 <div class="circle_titles">Repeat Visits</div>
               </div>
             </div>
-            <div class="arrow_wrapper"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="" class="arrow_image_right"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d66b5448b854_arrow-down-02.svg" alt="" class="arrow-image-mobile-02"></div>
+            <div class="arrow_wrapper"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="" class="arrow_image_right"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d675d748b853_arrow-down.svg" alt="" class="arrow-image-mobile-left"></div>
             <div class="circle_wrapper">
               <div class="circle_div">
                 <h1 class="counter">6</h1>
@@ -118,7 +118,7 @@
       </div>
       <div class="_2_block_row">
         <div class="_2_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="The Bank of the West building in Burbank, where Ryu Acupuncture Clinic is located">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -175,7 +175,7 @@
       </div>
       <div class="_5_block_row">
         <div data-w-id="5633b154-1e02-d1dc-e61c-3862799b0a0d" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_left">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_family.jpg" loading="lazy" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_family.jpg" loading="lazy" alt="Dr. Jay Ryu with a happy family" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -193,7 +193,7 @@
           </a>
         </div>
         <div data-w-id="6d4c4f45-25e0-28e9-7ddd-291ea3e23c37" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_child.jpg" loading="lazy" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_child.jpg" loading="lazy" alt="Dr. Jay Ryu with a pleased mother and child" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -211,7 +211,7 @@
           </a>
         </div>
         <div data-w-id="df406cd4-04cc-1944-6f8d-e388251aeeb1" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="Dr. Jay Ryu with a joyful mother and daughter" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -229,7 +229,7 @@
           </a>
         </div>
         <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="Dr. Jay Ryu with a delighted couple" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -247,7 +247,7 @@
           </a>
         </div>
         <div data-w-id="fe148618-67c7-622d-53e9-ec75c71c7c62" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_right">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="Dr. Jay Ryu with a satisfied patient after treatment" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -531,7 +531,7 @@
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block">
           <h3 class="footer_h3">Hours</h3>
-          <div class="w-layout-grid footer_grid_1_block">
+          <div class="w-layout-grid footer_grid_hours_block">
             <ul role="list" class="list w-list-unstyled">
               <li class="footer_hours">Mon: </li>
               <li class="footer_hours">Tue:</li>
