--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 09:03:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Apr 24 2021 09:32:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -199,7 +199,7 @@
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block">
           <h3 class="footer_h3">Hours</h3>
-          <div class="w-layout-grid footer_grid_1_block">
+          <div class="w-layout-grid footer_grid_hours_block">
             <ul role="list" class="list w-list-unstyled">
               <li class="footer_hours">Mon: </li>
               <li class="footer_hours">Tue:</li>
